[tool.poetry]
name = "lesson13-2"
version = "0.1.0"
description = ""
authors = ["Pinchuk Sergey <Pinboyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
